# ColeAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.prebuilt.yml  docker-compose.yml  pyproject.toml  start-services.sh  test_imports.py
.agents/plans/: persona-agent-system-mvp.md
.claude/: mcp.json
.github/workflows/: docker-build.yml
migrations/: 001_init_schema.sql
scripts/: build_coleai.py  crawl_cole_content.py  crawl_youtube_with_auth.py  full_cole_crawl.py  rebuild_with_enhanced_rag.py  test_agent.py  test_github_only.py  test_rag_strategies.py
src/: __init__.py  config.py  database.py  models.py
src/agents/: persona_agent.py
src/api/: app.py
src/api/routes/: health.py  personas.py  query.py
src/crawlers/: base.py  github.py  registry.py  youtube.py
src/mcp_server/: server.py
src/vector_store/: chunking.py  embeddings.py  reranking.py  store.py
