[tool.poetry]
name = "persona-agent-system"
version = "0.1.0"
description = "Multi-persona knowledge bank with PydanticAI and RAG"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic-ai = "^0.1.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
pgvector = "^0.3.0"
# fastmcp = "^0.5.0"  # TODO: Find correct MCP package
yt-dlp = "^2024.0.0"
pygithub = "^2.0.0"
openai = "^1.0.0"
httpx = "^0.27.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
